; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/pwm/extr_pwmbus.c_pwmbus_child_location_str.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/pwm/extr_pwmbus.c_pwmbus_child_location_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pwmbus_ivars = type { i32 }

@.str = private unnamed_addr constant [20 x i8] c"hwdev=%s channel=%u\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i8*, i64)* @pwmbus_child_location_str to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pwmbus_child_location_str(i32 %0, i32 %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.pwmbus_ivars*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %10 = load i32, i32* %6, align 4
  %11 = call %struct.pwmbus_ivars* @device_get_ivars(i32 %10)
  store %struct.pwmbus_ivars* %11, %struct.pwmbus_ivars** %9, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = load i64, i64* %8, align 8
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @device_get_parent(i32 %14)
  %16 = call i8* @device_get_nameunit(i32 %15)
  %17 = load %struct.pwmbus_ivars*, %struct.pwmbus_ivars** %9, align 8
  %18 = getelementptr inbounds %struct.pwmbus_ivars, %struct.pwmbus_ivars* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @snprintf(i8* %12, i64 %13, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i8* %16, i32 %19)
  ret i32 0
}

declare dso_local %struct.pwmbus_ivars* @device_get_ivars(i32) #1

declare dso_local i32 @snprintf(i8*, i64, i8*, i8*, i32) #1

declare dso_local i8* @device_get_nameunit(i32) #1

declare dso_local i32 @device_get_parent(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
